# ESP32-MPU6050

./: Cargo.toml
src/: lib.rs
