[package]
name = "esp-mpu6050"
version = "0.1.0"
edition = "2024"

[dependencies]
esp-hal = { version = "~1.0", features = ["defmt", "esp32c6"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
